src/lex_yacc/markdown/markdown.y.output
Terminals which are not used

   MINUS
   PLUS
   LEFTCURLY


Grammar

    0 $accept: markdownfile $end

    1 markdownfile: lines

    2 lines: lines line
    3      | /* empty */

    4 line: BLANKLINE
    5     | QUOTEBLANKLINE
    6     | H1 plaintext LINEBREAK
    7     | QUOTEH1 plaintext LINEBREAK
    8     | H2 plaintext LINEBREAK
    9     | QUOTEH2 plaintext LINEBREAK
   10     | H3 plaintext LINEBREAK
   11     | QUOTEH3 plaintext LINEBREAK
   12     | H4 plaintext LINEBREAK
   13     | QUOTEH4 plaintext LINEBREAK
   14     | H5 plaintext LINEBREAK
   15     | QUOTEH5 plaintext LINEBREAK
   16     | H6 plaintext LINEBREAK
   17     | QUOTEH6 plaintext LINEBREAK
   18     | inlineelements LINEBREAK
   19     | LARGERTHAN inlineelements LINEBREAK
   20     | OLSTART inlineelements LINEBREAK
   21     | QUOTEOLSTART inlineelements LINEBREAK
   22     | ULSTART inlineelements LINEBREAK
   23     | QUOTEULSTART inlineelements LINEBREAK
   24     | INDENT CODETEXT

   25 inlineelements: inlineelements inlineelement
   26               | inlineelement

   27 inlineelement: TEXT
   28              | SPECIALCHAR
   29              | STAR inlineelements STAR
   30              | UNDERSCORE inlineelements UNDERSCORE
   31              | DOUBLESTAR inlineelements DOUBLESTAR
   32              | DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   33              | BACKTICK codespan BACKTICK
   34              | DOUBLEBACKTICK codespan DOUBLEBACKTICK
   35              | LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   36              | EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   37              | error LINEBREAK
   38              | error RIGHTPARENTHESES
   39              | error RIGHTCURLY
   40              | error RIGHTSQUARE

   41 plaintext: plaintext text_list
   42          | text_list

   43 text_list: TEXT
   44          | SPECIALCHAR

   45 codespan: codespan code_list
   46         | code_list

   47 code_list: CODETEXT
   48          | SPECIALCHAR


Terminals, with rules where they appear

$end (0) 0
error (256) 37 38 39 40
TEXT (258) 27 43
SPECIALCHAR (259) 28 44 48
CODETEXT (260) 24 47
INDENT (261) 24
H1 (262) 6
H2 (263) 8
H3 (264) 10
H4 (265) 12
H5 (266) 14
H6 (267) 16
QUOTEH1 (268) 7
QUOTEH2 (269) 9
QUOTEH3 (270) 11
QUOTEH4 (271) 13
QUOTEH5 (272) 15
QUOTEH6 (273) 17
EXCLAMATION (274) 36
MINUS (275)
PLUS (276)
RIGHTPARENTHESES (277) 35 36 38
LEFTPARENTHESES (278) 35 36
RIGHTSQUARE (279) 35 36 40
LEFTSQUARE (280) 35 36
LEFTCURLY (281)
RIGHTCURLY (282) 39
UNDERSCORE (283) 30
STAR (284) 29
BACKTICK (285) 33
BLANKLINE (286) 4
LINEBREAK (287) 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 37
LARGERTHAN (288) 19
DOUBLESTAR (289) 31
DOUBLEUNDERSCORE (290) 32
OLSTART (291) 20
ULSTART (292) 22
DOUBLEBACKTICK (293) 34
QUOTEBLANKLINE (294) 5
QUOTEOLSTART (295) 21
QUOTEULSTART (296) 23
STARX (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
markdownfile (44)
    on left: 1, on right: 0
lines (45)
    on left: 2 3, on right: 1 2
line (46)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24, on right: 2
inlineelements (47)
    on left: 25 26, on right: 18 19 20 21 22 23 25 29 30 31 32
inlineelement (48)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40,
    on right: 25 26
plaintext (49)
    on left: 41 42, on right: 6 7 8 9 10 11 12 13 14 15 16 17 35 36
    41
text_list (50)
    on left: 43 44, on right: 41 42
codespan (51)
    on left: 45 46, on right: 33 34 45
code_list (52)
    on left: 47 48, on right: 45 46


state 0

    0 $accept: . markdownfile $end
    1 markdownfile: . lines
    2 lines: . lines line
    3      | .

    $default  reduce using rule 3 (lines)

    markdownfile  go to state 1
    lines         go to state 2


state 1

    0 $accept: markdownfile . $end

    $end  shift, and go to state 3


state 2

    1 markdownfile: lines .  [$end]
    2 lines: lines . line
    4 line: . BLANKLINE
    5     | . QUOTEBLANKLINE
    6     | . H1 plaintext LINEBREAK
    7     | . QUOTEH1 plaintext LINEBREAK
    8     | . H2 plaintext LINEBREAK
    9     | . QUOTEH2 plaintext LINEBREAK
   10     | . H3 plaintext LINEBREAK
   11     | . QUOTEH3 plaintext LINEBREAK
   12     | . H4 plaintext LINEBREAK
   13     | . QUOTEH4 plaintext LINEBREAK
   14     | . H5 plaintext LINEBREAK
   15     | . QUOTEH5 plaintext LINEBREAK
   16     | . H6 plaintext LINEBREAK
   17     | . QUOTEH6 plaintext LINEBREAK
   18     | . inlineelements LINEBREAK
   19     | . LARGERTHAN inlineelements LINEBREAK
   20     | . OLSTART inlineelements LINEBREAK
   21     | . QUOTEOLSTART inlineelements LINEBREAK
   22     | . ULSTART inlineelements LINEBREAK
   23     | . QUOTEULSTART inlineelements LINEBREAK
   24     | . INDENT CODETEXT
   25 inlineelements: . inlineelements inlineelement
   26               | . inlineelement
   27 inlineelement: . TEXT
   28              | . SPECIALCHAR
   29              | . STAR inlineelements STAR
   30              | . UNDERSCORE inlineelements UNDERSCORE
   31              | . DOUBLESTAR inlineelements DOUBLESTAR
   32              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   33              | . BACKTICK codespan BACKTICK
   34              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   35              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   36              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   37              | . error LINEBREAK
   38              | . error RIGHTPARENTHESES
   39              | . error RIGHTCURLY
   40              | . error RIGHTSQUARE

    error             shift, and go to state 4
    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    INDENT            shift, and go to state 7
    H1                shift, and go to state 8
    H2                shift, and go to state 9
    H3                shift, and go to state 10
    H4                shift, and go to state 11
    H5                shift, and go to state 12
    H6                shift, and go to state 13
    QUOTEH1           shift, and go to state 14
    QUOTEH2           shift, and go to state 15
    QUOTEH3           shift, and go to state 16
    QUOTEH4           shift, and go to state 17
    QUOTEH5           shift, and go to state 18
    QUOTEH6           shift, and go to state 19
    EXCLAMATION       shift, and go to state 20
    LEFTSQUARE        shift, and go to state 21
    UNDERSCORE        shift, and go to state 22
    STAR              shift, and go to state 23
    BACKTICK          shift, and go to state 24
    BLANKLINE         shift, and go to state 25
    LARGERTHAN        shift, and go to state 26
    DOUBLESTAR        shift, and go to state 27
    DOUBLEUNDERSCORE  shift, and go to state 28
    OLSTART           shift, and go to state 29
    ULSTART           shift, and go to state 30
    DOUBLEBACKTICK    shift, and go to state 31
    QUOTEBLANKLINE    shift, and go to state 32
    QUOTEOLSTART      shift, and go to state 33
    QUOTEULSTART      shift, and go to state 34

    $end  reduce using rule 1 (markdownfile)

    line            go to state 35
    inlineelements  go to state 36
    inlineelement   go to state 37


state 3

    0 $accept: markdownfile $end .

    $default  accept


state 4

   37 inlineelement: error . LINEBREAK
   38              | error . RIGHTPARENTHESES
   39              | error . RIGHTCURLY
   40              | error . RIGHTSQUARE

    RIGHTPARENTHESES  shift, and go to state 38
    RIGHTSQUARE       shift, and go to state 39
    RIGHTCURLY        shift, and go to state 40
    LINEBREAK         shift, and go to state 41


state 5

   27 inlineelement: TEXT .

    $default  reduce using rule 27 (inlineelement)


state 6

   28 inlineelement: SPECIALCHAR .

    $default  reduce using rule 28 (inlineelement)


state 7

   24 line: INDENT . CODETEXT

    CODETEXT  shift, and go to state 42


state 8

    6 line: H1 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 45
    text_list  go to state 46


state 9

    8 line: H2 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 47
    text_list  go to state 46


state 10

   10 line: H3 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 48
    text_list  go to state 46


state 11

   12 line: H4 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 49
    text_list  go to state 46


state 12

   14 line: H5 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 50
    text_list  go to state 46


state 13

   16 line: H6 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 51
    text_list  go to state 46


state 14

    7 line: QUOTEH1 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 52
    text_list  go to state 46


state 15

    9 line: QUOTEH2 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 53
    text_list  go to state 46


state 16

   11 line: QUOTEH3 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 54
    text_list  go to state 46


state 17

   13 line: QUOTEH4 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 55
    text_list  go to state 46


state 18

   15 line: QUOTEH5 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 56
    text_list  go to state 46


state 19

   17 line: QUOTEH6 . plaintext LINEBREAK
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 57
    text_list  go to state 46


state 20

   36 inlineelement: EXCLAMATION . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    LEFTSQUARE  shift, and go to state 58


state 21

   35 inlineelement: LEFTSQUARE . plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   41 plaintext: . plaintext text_list
   42          | . text_list
   43 text_list: . TEXT
   44          | . SPECIALCHAR

    TEXT         shift, and go to state 43
    SPECIALCHAR  shift, and go to state 44

    plaintext  go to state 59
    text_list  go to state 46


state 22

   25 inlineelements: . inlineelements inlineelement
   26               | . inlineelement
   27 inlineelement: . TEXT
   28              | . SPECIALCHAR
   29              | . STAR inlineelements STAR
   30              | . UNDERSCORE inlineelements UNDERSCORE
   30              | UNDERSCORE . inlineelements UNDERSCORE
   31              | . DOUBLESTAR inlineelements DOUBLESTAR
   32              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   33              | . BACKTICK codespan BACKTICK
   34              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   35              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   36              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   37              | . error LINEBREAK
   38              | . error RIGHTPARENTHESES
   39              | . error RIGHTCURLY
   40              | . error RIGHTSQUARE

    error             shift, and go to state 4
    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 20
    LEFTSQUARE        shift, and go to state 21
    UNDERSCORE        shift, and go to state 22
    STAR              shift, and go to state 23
    BACKTICK          shift, and go to state 24
    DOUBLESTAR        shift, and go to state 27
    DOUBLEUNDERSCORE  shift, and go to state 28
    DOUBLEBACKTICK    shift, and go to state 31

    inlineelements  go to state 60
    inlineelement   go to state 37


state 23

   25 inlineelements: . inlineelements inlineelement
   26               | . inlineelement
   27 inlineelement: . TEXT
   28              | . SPECIALCHAR
   29              | . STAR inlineelements STAR
   29              | STAR . inlineelements STAR
   30              | . UNDERSCORE inlineelements UNDERSCORE
   31              | . DOUBLESTAR inlineelements DOUBLESTAR
   32              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   33              | . BACKTICK codespan BACKTICK
   34              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   35              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   36              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   37              | . error LINEBREAK
   38              | . error RIGHTPARENTHESES
   39              | . error RIGHTCURLY
   40              | . error RIGHTSQUARE

    error             shift, and go to state 4
    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 20
    LEFTSQUARE        shift, and go to state 21
    UNDERSCORE        shift, and go to state 22
    STAR              shift, and go to state 23
    BACKTICK          shift, and go to state 24
    DOUBLESTAR        shift, and go to state 27
    DOUBLEUNDERSCORE  shift, and go to state 28
    DOUBLEBACKTICK    shift, and go to state 31

    inlineelements  go to state 61
    inlineelement   go to state 37


state 24

   33 inlineelement: BACKTICK . codespan BACKTICK
   45 codespan: . codespan code_list
   46         | . code_list
   47 code_list: . CODETEXT
   48          | . SPECIALCHAR

    SPECIALCHAR  shift, and go to state 62
    CODETEXT     shift, and go to state 63

    codespan   go to state 64
    code_list  go to state 65


state 25

    4 line: BLANKLINE .

    $default  reduce using rule 4 (line)


state 26

   19 line: LARGERTHAN . inlineelements LINEBREAK
   25 inlineelements: . inlineelements inlineelement
   26               | . inlineelement
   27 inlineelement: . TEXT
   28              | . SPECIALCHAR
   29              | . STAR inlineelements STAR
   30              | . UNDERSCORE inlineelements UNDERSCORE
   31              | . DOUBLESTAR inlineelements DOUBLESTAR
   32              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   33              | . BACKTICK codespan BACKTICK
   34              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   35              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   36              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   37              | . error LINEBREAK
   38              | . error RIGHTPARENTHESES
   39              | . error RIGHTCURLY
   40              | . error RIGHTSQUARE

    error             shift, and go to state 4
    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 20
    LEFTSQUARE        shift, and go to state 21
    UNDERSCORE        shift, and go to state 22
    STAR              shift, and go to state 23
    BACKTICK          shift, and go to state 24
    DOUBLESTAR        shift, and go to state 27
    DOUBLEUNDERSCORE  shift, and go to state 28
    DOUBLEBACKTICK    shift, and go to state 31

    inlineelements  go to state 66
    inlineelement   go to state 37


state 27

   25 inlineelements: . inlineelements inlineelement
   26               | . inlineelement
   27 inlineelement: . TEXT
   28              | . SPECIALCHAR
   29              | . STAR inlineelements STAR
   30              | . UNDERSCORE inlineelements UNDERSCORE
   31              | . DOUBLESTAR inlineelements DOUBLESTAR
   31              | DOUBLESTAR . inlineelements DOUBLESTAR
   32              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   33              | . BACKTICK codespan BACKTICK
   34              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   35              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   36              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   37              | . error LINEBREAK
   38              | . error RIGHTPARENTHESES
   39              | . error RIGHTCURLY
   40              | . error RIGHTSQUARE

    error             shift, and go to state 4
    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 20
    LEFTSQUARE        shift, and go to state 21
    UNDERSCORE        shift, and go to state 22
    STAR              shift, and go to state 23
    BACKTICK          shift, and go to state 24
    DOUBLESTAR        shift, and go to state 27
    DOUBLEUNDERSCORE  shift, and go to state 28
    DOUBLEBACKTICK    shift, and go to state 31

    inlineelements  go to state 67
    inlineelement   go to state 37


state 28

   25 inlineelements: . inlineelements inlineelement
   26               | . inlineelement
   27 inlineelement: . TEXT
   28              | . SPECIALCHAR
   29              | . STAR inlineelements STAR
   30              | . UNDERSCORE inlineelements UNDERSCORE
   31              | . DOUBLESTAR inlineelements DOUBLESTAR
   32              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   32              | DOUBLEUNDERSCORE . inlineelements DOUBLEUNDERSCORE
   33              | . BACKTICK codespan BACKTICK
   34              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   35              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   36              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   37              | . error LINEBREAK
   38              | . error RIGHTPARENTHESES
   39              | . error RIGHTCURLY
   40              | . error RIGHTSQUARE

    error             shift, and go to state 4
    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 20
    LEFTSQUARE        shift, and go to state 21
    UNDERSCORE        shift, and go to state 22
    STAR              shift, and go to state 23
    BACKTICK          shift, and go to state 24
    DOUBLESTAR        shift, and go to state 27
    DOUBLEUNDERSCORE  shift, and go to state 28
    DOUBLEBACKTICK    shift, and go to state 31

    inlineelements  go to state 68
    inlineelement   go to state 37


state 29

   20 line: OLSTART . inlineelements LINEBREAK
   25 inlineelements: . inlineelements inlineelement
   26               | . inlineelement
   27 inlineelement: . TEXT
   28              | . SPECIALCHAR
   29              | . STAR inlineelements STAR
   30              | . UNDERSCORE inlineelements UNDERSCORE
   31              | . DOUBLESTAR inlineelements DOUBLESTAR
   32              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   33              | . BACKTICK codespan BACKTICK
   34              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   35              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   36              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   37              | . error LINEBREAK
   38              | . error RIGHTPARENTHESES
   39              | . error RIGHTCURLY
   40              | . error RIGHTSQUARE

    error             shift, and go to state 4
    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 20
    LEFTSQUARE        shift, and go to state 21
    UNDERSCORE        shift, and go to state 22
    STAR              shift, and go to state 23
    BACKTICK          shift, and go to state 24
    DOUBLESTAR        shift, and go to state 27
    DOUBLEUNDERSCORE  shift, and go to state 28
    DOUBLEBACKTICK    shift, and go to state 31

    inlineelements  go to state 69
    inlineelement   go to state 37


state 30

   22 line: ULSTART . inlineelements LINEBREAK
   25 inlineelements: . inlineelements inlineelement
   26               | . inlineelement
   27 inlineelement: . TEXT
   28              | . SPECIALCHAR
   29              | . STAR inlineelements STAR
   30              | . UNDERSCORE inlineelements UNDERSCORE
   31              | . DOUBLESTAR inlineelements DOUBLESTAR
   32              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   33              | . BACKTICK codespan BACKTICK
   34              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   35              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   36              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   37              | . error LINEBREAK
   38              | . error RIGHTPARENTHESES
   39              | . error RIGHTCURLY
   40              | . error RIGHTSQUARE

    error             shift, and go to state 4
    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 20
    LEFTSQUARE        shift, and go to state 21
    UNDERSCORE        shift, and go to state 22
    STAR              shift, and go to state 23
    BACKTICK          shift, and go to state 24
    DOUBLESTAR        shift, and go to state 27
    DOUBLEUNDERSCORE  shift, and go to state 28
    DOUBLEBACKTICK    shift, and go to state 31

    inlineelements  go to state 70
    inlineelement   go to state 37


state 31

   34 inlineelement: DOUBLEBACKTICK . codespan DOUBLEBACKTICK
   45 codespan: . codespan code_list
   46         | . code_list
   47 code_list: . CODETEXT
   48          | . SPECIALCHAR

    SPECIALCHAR  shift, and go to state 62
    CODETEXT     shift, and go to state 63

    codespan   go to state 71
    code_list  go to state 65


state 32

    5 line: QUOTEBLANKLINE .

    $default  reduce using rule 5 (line)


state 33

   21 line: QUOTEOLSTART . inlineelements LINEBREAK
   25 inlineelements: . inlineelements inlineelement
   26               | . inlineelement
   27 inlineelement: . TEXT
   28              | . SPECIALCHAR
   29              | . STAR inlineelements STAR
   30              | . UNDERSCORE inlineelements UNDERSCORE
   31              | . DOUBLESTAR inlineelements DOUBLESTAR
   32              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   33              | . BACKTICK codespan BACKTICK
   34              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   35              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   36              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   37              | . error LINEBREAK
   38              | . error RIGHTPARENTHESES
   39              | . error RIGHTCURLY
   40              | . error RIGHTSQUARE

    error             shift, and go to state 4
    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 20
    LEFTSQUARE        shift, and go to state 21
    UNDERSCORE        shift, and go to state 22
    STAR              shift, and go to state 23
    BACKTICK          shift, and go to state 24
    DOUBLESTAR        shift, and go to state 27
    DOUBLEUNDERSCORE  shift, and go to state 28
    DOUBLEBACKTICK    shift, and go to state 31

    inlineelements  go to state 72
    inlineelement   go to state 37


state 34
